--- a/themes/customized/i18n/de.yaml
+++ b/themes/customized/i18n/de.yaml
@@ -84,3 +84,15 @@
 
 - id: translations
   translation: "Übersetzungen: "
+
+- id: cookie_message
+  translation: Sie können eine Speicherung der Cookies verhindern. Wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können.
+
+- id: cookie_dismiss
+  translation: Ablehnen
+
+- id: cookie_allow
+  translation: Erlauben
+
+- id: cookie_link
+  translation: Erfahren Sie mehr.
