--- a/themes/customized/i18n/en.yaml
+++ b/themes/customized/i18n/en.yaml
@@ -88,3 +88,15 @@
 
 - id: author
   translation: Author
+
+- id: cookie_message
+  translation: You can prevent cookies from being stored. However, please note that if you do this you may not be able to use the full functionality of this website.
+
+- id: cookie_dismiss
+  translation: Decline
+
+- id: cookie_allow
+  translation: Allow
+
+- id: cookie_link
+  translation: Learn more.
