--- a/themes/customized/i18n/en.yaml
+++ b/themes/customized/i18n/en.yaml
@@ -90,7 +90,7 @@
   translation: Author
 
 - id: cookie_message
-  translation: You can prevent cookies from being stored. However, please note that if you do this you may not be able to use the full functionality of this website.
+  translation: This website uses cookies. We use cookies to personalise content and to analyse our traffic. You can prevent these cookies from being stored. However, please note that if you do this you may not be able to use the full functionality of this website.
 
 - id: cookie_dismiss
   translation: Decline
