Updated the translation files

--- a/themes/customized/i18n/en.yaml
+++ b/themes/customized/i18n/en.yaml
@@ -1,94 +1,19 @@
-- id: sitemap
-  translation: Sitemap
-
 - id: home
   translation: Home
 
 - id: blog
   translation: Blog
 
-- id: tags
-  translation: Tags
 
-- id: categories
-  translation: Categories
-
-- id: social
-  translation: Social
-
-- id: links
-  translation: Links
-
-- id: rss_feed
-  translation: RSS Feed
-
-- id: tag
-  translation: Tag
-
-- id: tags
-  translation: Tags
-
-- id: category
-  translation: Category
-
-- id: archive_of_tag
-  translation: Archives Listed by Tag
-
-- id: archive_of_category
-  translation: Archives Listed by Category
-
-- id: archive
-  translation: Archive
-
-- id: list_of_tags
-  translation: List of Tags
-
-- id: list_of_categories
-  translation: List of Categories
-
-- id: more_post
-  translation: More Posts
-
-- id: articles_tagged
-  translation: articles tagged
-
-- id: article_tagged
-  translation: article tagged
-
-- id: error_404
-  translation: 'Error 404 - Page Not Found'
-
-- id: in_category
-  translation: In categories
-
-
-- id: latest_posts
-  translation: Latest Posts
-
-- id: page
-  translation: Page
-
+# pagination
 - id: previous
   translation: Previous
 
 - id: next
   translation: Next
 
-- id: author_by
-  translation: By
 
-- id: related
-  translation: Related Posts
-
-- id: load_disqus
-  translation: Load Disqus Comments
-
-- id: translations
-  translation: "Translations: "
-
-- id: author
-  translation: Author
-
+# cookie dialog
 - id: cookie_message
   translation: This website uses cookies. We use cookies to personalise content and to analyse our traffic. You can prevent these cookies from being stored. However, please note that if you do this you may not be able to use the full functionality of this website.
 
@@ -101,5 +26,26 @@
 - id: cookie_link
   translation: Learn more.
 
+
+# blog
+- id: category
+  translation: Category
+
 - id: readMore_link
   translation: Read more...
+
+
+# 404 error page
+- id: error_404
+  translation: 'Error 404 - Page Not Found'
+
+
+# terms.html file
+- id: more_post
+  translation: More Posts
+
+- id: articles_tagged
+  translation: articles tagged
+
+- id: article_tagged
+  translation: article tagged
