--- a/themes/customized/i18n/de.yaml
+++ b/themes/customized/i18n/de.yaml
@@ -1,90 +1,19 @@
-- id: sitemap
-  translation: Sitemap
-
 - id: home
   translation: Startseite
 
 - id: blog
   translation: Blog
 
-- id: tags
-  translation: Schlagworte
 
-- id: categories
-  translation: Kategorien
-
-- id: social
-  translation: Social
-
-- id: links
-  translation: Links
-
-- id: rss_feed
-  translation: RSS-Feed
-
-- id: tag
-  translation: Schlagwort
-
-- id: tags
-  translation: Schlagwörter
-
-- id: category
-  translation: Kategorie
-
-- id: archive_of_tag
-  translation: Archiv nach Schlagworten
-
-- id: archive_of_category
-  translation: Archiv nach Kategorien
-
-- id: archive
-  translation: Archiv
-
-- id: list_of_tags
-  translation: Liste der Schlagworte
-
-- id: list_of_categories
-  translation: Liste der Kategorien
-
-- id: more_post
-  translation: Mehr Beiträge
-
-- id: articles_tagged
-  translation: Artikel markiert
-
-- id: article_tagged
-  translation: Artikel markiert
-
-- id: error_404
-  translation: 'Fehler 404 - Seite nicht gefunden'
-
-- id: in_category
-  translation: 'In den Kategorien:'
-
-- id: latest_posts
-  translation: Neueste Beiträge
-
-- id: page
-  translation: Seite
-
+# pagination
 - id: previous
   translation: Zurück
 
 - id: next
   translation: Weiter
 
-- id: author_by
-  translation: Von
 
-- id: related
-  translation: Verwandte Beiträge
-
-- id: load_disqus
-  translation: Lade Kommentare von Disqus
-
-- id: translations
-  translation: "Übersetzungen: "
-
+# cookie dialog
 - id: cookie_message
   translation: Diese Website verwendet Cookies. Wir verwenden Cookies, um Inhalte zu personalisieren und unseren Datenverkehr zu analysieren. Sie können eine Speicherung der Cookies verhindern. Wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können.
 
@@ -97,5 +26,26 @@
 - id: cookie_link
   translation: Erfahren Sie mehr.
 
+
+# blog
+- id: category
+  translation: Kategorie
+
 - id: readMore_link
   translation: Mehr lesen...
+
+
+# 404 error page
+- id: error_404
+  translation: 'Fehler 404 - Seite nicht gefunden'
+
+
+# terms.html file
+- id: more_post
+  translation: Mehr Beiträge
+
+- id: articles_tagged
+  translation: Artikel markiert
+
+- id: article_tagged
+  translation: Artikel markiert
