Added the related posts to the blog post sidebar

--- a/themes/customized/i18n/de.yaml
+++ b/themes/customized/i18n/de.yaml
@@ -37,6 +37,9 @@
 - id: tags
   translation: Tags
 
+- id: related_posts
+  translation: Ähnliche Beiträge
+
 - id: readMore_link
   translation: Mehr lesen...
 
