Edited the dutch translation

--- a/themes/customized/i18n/nl.yaml
+++ b/themes/customized/i18n/nl.yaml
@@ -41,7 +41,7 @@
   translation: Tags
 
 - id: related_posts
-  translation: Gerelateerde posts
+  translation: Gerelateerde artikel
 
 - id: readMore_link
   translation: Lees meer...
