Added the search function to the blog sidebar

--- a/themes/customized/i18n/nl.yaml
+++ b/themes/customized/i18n/nl.yaml
@@ -40,6 +40,9 @@
 - id: tags
   translation: Tags
 
+- id: search
+  translation: Zoeken
+
 - id: related_posts
   translation: Gerelateerde artikel
 
