Added the no search result translation

--- a/themes/customized/i18n/de.yaml
+++ b/themes/customized/i18n/de.yaml
@@ -43,6 +43,9 @@
 - id: search
   translation: Suchen
 
+- id: no_search_results
+  translation: Keine Beiträge gefunden.
+
 - id: related_posts
   translation: Ähnliche Beiträge
 
