--- a/themes/customized/i18n/en.yaml
+++ b/themes/customized/i18n/en.yaml
@@ -43,6 +43,9 @@
 - id: search
   translation: Search
 
+- id: no_search_results
+  translation: No results found.
+
 - id: related_posts
   translation: Related posts
 
