Fixed errors on the page

--- a/themes/customized/i18n/nl.yaml
+++ b/themes/customized/i18n/nl.yaml
@@ -44,7 +44,7 @@
   translation: Zoeken
 
 - id: no_search_results
-  translation: Geen artkel gevonden.
+  translation: Geen artikel gevonden.
 
 - id: related_posts
   translation: Gerelateerde artikel
