--- a/themes/customized/i18n/nl.yaml
+++ b/themes/customized/i18n/nl.yaml
@@ -40,9 +40,6 @@
 - id: tags
   translation: Tags
 
-- id: filter
-  translation: Filter
-
 - id: search
   translation: Zoeken
 
@@ -51,6 +48,9 @@
 
 - id: no_search_results
   translation: Geen artikel gevonden.
+
+- id: all_posts
+  translation: Alle artikel
 
 - id: related_posts
   translation: Gerelateerde artikel
