Updated the cookie banner text with the social media plugin

--- a/themes/customized/i18n/en.yaml
+++ b/themes/customized/i18n/en.yaml
@@ -15,7 +15,7 @@
 
 # cookie dialog
 - id: cookie_message
-  translation: This website uses cookies. We use cookies to personalise content and to analyse our traffic. You can prevent these cookies from being stored. However, please note that if you do this you may not be able to use the full functionality of this website.
+  translation: This website uses cookies. We use cookies to personalise content, to analyse our traffic and for social media plugins. You can prevent these cookies from being stored. However, please note that if you do this you may not be able to use the full functionality of this website.
 
 - id: cookie_dismiss
   translation: Decline
