--- a/themes/customized/i18n/de.yaml
+++ b/themes/customized/i18n/de.yaml
@@ -15,7 +15,7 @@
 
 # cookie dialog
 - id: cookie_message
-  translation: Diese Website verwendet Cookies. Wir verwenden Cookies, um Inhalte zu personalisieren und unseren Datenverkehr zu analysieren. Sie können eine Speicherung der Cookies verhindern. Wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können.
+  translation: Diese Website verwendet Cookies. Wir verwenden Cookies, um Inhalte zu personalisieren, unseren Datenverkehr zu analysieren, sowie für Social Media Verknüpfungen. Sie können eine Speicherung der Cookies verhindern. Wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können.
 
 - id: cookie_dismiss
   translation: Ablehnen
