Added the disclaimer youtube translations

--- a/themes/customized/i18n/de.yaml
+++ b/themes/customized/i18n/de.yaml
@@ -64,6 +64,12 @@
 - id: info_without_guarantee
   translation: Die Infos wurden nach bestem Wissen und Gewissen zusammengetragen. Alle Angaben sind dennoch ohne Gewähr.
 
+- id: disclaimer_youtube
+  translation: Youtube-Videos werden nicht angezeigt, da die Cookies nicht akzeptiert wurden. Wenn Sie die YouTube-Videos anschauen möchten, müssen Sie die Cookies akzeptieren.
+
+- id: disclaimer_youtube_link
+  translation: Cookie Banner anzeigen
+
 
 # 404 error page
 - id: error_404
