--- a/themes/customized/i18n/nl.yaml
+++ b/themes/customized/i18n/nl.yaml
@@ -70,7 +70,7 @@
 - id: disclaimer_youtube
   translation: YouTube-video's worden niet weergegeven omdat de cookies niet geaccepteerd zijn. Als u de YouTube-video's wilt zien, moet u de cookies accepteren.
 
-- id: disclaimer_youtube_link
+- id: disclaimer_social_media_link
   translation: Cookiebanner weergeven
 
 
